--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,76 +1,85 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  @layer base {
-    :root {
-      --background: 0 0% 100%;
-      --foreground: 0 0% 3.9%;
+@layer base {
+  :root {
+    --gradient: linear-gradient(to top left, #ff9966, #ff5e62);
 
-      --card: 0 0% 100%;
-      --card-foreground: 0 0% 3.9%;
+    --background: 21 65% 85%;
+    --foreground: 21 10% 30%;
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 0 0% 3.9%;
+    --muted: 21 50% 21%;
+    --muted-foreground: 21 10% 57%;
 
-      --primary: 0 0% 9%;
-      --primary-foreground: 0 0% 98%;
+    --popover: 21 45% 9.1%;
+    --popover-foreground: 21 10% 98.5%;
 
-      --secondary: 0 0% 96.1%;
-      --secondary-foreground: 0 0% 9%;
+    --card: 21 45% 9.1%;
+    --card-foreground: 21 10% 98.5%;
 
-      --muted: 0 0% 96.1%;
-      --muted-foreground: 0 0% 45.1%;
+    --border: 21 50% 21%;
+    --input: 21 50% 21%;
 
-      --accent: 0 0% 96.1%;
-      --accent-foreground: 0 0% 9%;
+    --primary: 21 100% 70%;
+    --primary-foreground: 21 10% 7%;
 
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 0 0% 98%;
+    --secondary: 21 50% 21%;
+    --secondary-foreground: 21 10% 98.5%;
 
-      --border: 0 0% 89.8%;
-      --input: 0 0% 89.8%;
-      --ring: 0 0% 3.9%;
+    --accent: 21 50% 21%;
+    --accent-foreground: 21 10% 98.5%;
 
-      --radius: 0.5rem;
-    }
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 21 10% 98.5%;
 
-    .dark {
-      --background: 0 0% 3.9%;
-      --foreground: 0 0% 98%;
-
-      --card: 0 0% 3.9%;
-      --card-foreground: 0 0% 98%;
-
-      --popover: 0 0% 3.9%;
-      --popover-foreground: 0 0% 98%;
-
-      --primary: 0 0% 98%;
-      --primary-foreground: 0 0% 9%;
-
-      --secondary: 0 0% 14.9%;
-      --secondary-foreground: 0 0% 98%;
-
-      --muted: 0 0% 14.9%;
-      --muted-foreground: 0 0% 63.9%;
-
-      --accent: 0 0% 14.9%;
-      --accent-foreground: 0 0% 98%;
-
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 0 0% 98%;
-
-      --border: 0 0% 14.9%;
-      --input: 0 0% 14.9%;
-      --ring: 0 0% 83.1%;
-    }
+    --ring: 21 100% 70%;
   }
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+  .dark {
+    --gradient: linear-gradient(to top left, #ff9966, #ff5e62);
+
+    --background: 21 65% 5.6%;
+    --foreground: 21 10% 98.5%;
+
+    --muted: 21 50% 21%;
+    --muted-foreground: 21 10% 57%;
+
+    --popover: 21 45% 9.1%;
+    --popover-foreground: 21 10% 98.5%;
+
+    --card: 21 45% 9.1%;
+    --card-foreground: 21 10% 98.5%;
+
+    --border: 21 50% 21%;
+    --input: 21 50% 21%;
+
+    --primary: 21 100% 70%;
+    --primary-foreground: 21 10% 7%;
+
+    --secondary: 21 50% 21%;
+    --secondary-foreground: 21 10% 98.5%;
+
+    --accent: 21 50% 21%;
+    --accent-foreground: 21 10% 98.5%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 21 10% 98.5%;
+
+    --ring: 21 100% 70%;
   }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+body {
+  box-sizing: border-box;
+}
